# onnxscriptGPT

./: README.md  TODO.md  pyproject.toml
src/onnxscriptgpt/: __init__.py
