[project]
name = "onnxscriptgpt"
version = "0.1.0"
description = "Implementation of gpt2 in onnxscript "
authors = [
    { name = "Ryu1845", email = "ryu@tpgjbo.xyz" }
]
dependencies = [
    "onnx~=1.14.0",
    "onnxruntime~=1.15.0",
    "pytest~=7.3.1",
    "onnxscript @ git+https://github.com/microsoft/onnxscript/",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
